--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,122 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 img {
   display: block;
   max-width: 100%;
+  border-radius: 5px;
+}
+
+body{
+  font-family: 'Vollkorn', serif;
+}
+
+
+/* Grid Geral */
+
+.estrutura{
+  display: grid;
+  grid-template-columns: minmax(160px,1fr) 3fr 300px ;
+  grid-template-areas: 
+  "header header header"
+  "sidenav content anuncios"
+  "footer footer footer"
+  ;
+}
+
+/* HEADER */
+
+.header{
+  grid-area: header;
+  background: linear-gradient(135deg, #8844EE,#B07DFB) ;
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.logo{
+  max-width: 200px;
+}
+
+.header ul{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.header nav a{
+  display: block;
+  padding: 10px;
+  color: #FFF;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, .1);
+  border-radius: 5px;
+  transition: 0.1s;
+}
+
+.header nav a:hover{
+  background: rgba(0, 0, 0, .5);
+}
+/* HEADER */
+
+/* SIDENAV */
+
+.sidenav{
+  grid-area: sidenav;
+  background: #fafbfc;
+  padding: 30px;
+}
+
+.sidenav li a{
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: #FFF;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  transition: 0.1s ease-out;
+}
+
+.sidenav li a:hover{
+  background: #b07dfb;
+}
+
+/* SIDENAV */
+
+/* CONTENT */
+
+.content{
+  grid-area: content;
+}
+
+/* CONTENT */
+
+/* ANUNCIOS */
+.anuncios{
+  grid-area: anuncios;
+  display: grid;
+  background: #fafbfc ;
+  align-content: start;
+  padding: 30px;
+  gap: 30px;
+}
+
+/* ANUNCIOS */
+
+/* FOOTER */
+.footer{
+  grid-area: footer;
+  background: linear-gradient(135deg, #8844EE,#B07DFB);
+}
+
+.footer p{
+  color: #FFF;
+  text-align: center;
+  padding: 30px;
 }
