--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,341 @@
-* {
+body,
+p,
+h1,
+ul,
+li,
+blockquote {
+  padding: 0px;
+  margin: 0px;
+}
+
+body {
+  font-family: 'Vollkorn', Georgia, serif;
+}
+
+li {
   list-style: none;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+}
+
+a {
   text-decoration: none;
 }
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
-body{
-  font-family: 'Vollkorn', serif;
-}
+/* GRID GERAL */
 
-
-/* Grid Geral */
-
-.estrutura{
+.estrutura {
   display: grid;
-  grid-template-columns: minmax(160px,1fr) 3fr 300px ;
-  grid-template-areas: 
-  "header header header"
-  "sidenav content anuncios"
-  "footer footer footer"
-  ;
+  grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+  grid-template-areas:
+    'header header header'
+    'sidenav content anuncios'
+    'footer footer footer';
+}
+@media (max-width: 1200px) {
+  .estrutura {
+    grid-template-areas:
+      'header header header'
+      'sidenav content content'
+      'sidenav anuncios anuncios'
+      'footer footer footer';
+  }
 }
 
-/* HEADER */
+@media (max-width: 760px) {
+  .estrutura {
+    grid-template-areas:
+      'header'
+      'sidenav'
+      'content'
+      'anuncios'
+      'footer';
+    grid-template-columns: 100%;
+  }
+}
 
-.header{
+/*HEADER*/
+
+.header {
   grid-area: header;
-  background: linear-gradient(135deg, #8844EE,#B07DFB) ;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
   padding: 30px;
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
 }
 
-.logo{
+.logo {
   max-width: 200px;
 }
 
-.header ul{
+.header nav ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
 }
 
-.header nav a{
+.header nav a {
   display: block;
   padding: 10px;
-  color: #FFF;
+  color: white;
   font-size: 1.125em;
-  background: rgba(0, 0, 0, .1);
+  background: rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: 0.1s;
 }
 
-.header nav a:hover{
-  background: rgba(0, 0, 0, .5);
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
-/* HEADER */
 
-/* SIDENAV */
+.header li + li {
+  margin-left: 30px;
+}
 
-.sidenav{
+@media (max-width: 760px) {
+  .header {
+    grid-template-columns: auto;
+  }
+  .logo {
+    margin-bottom: 20px;
+  }
+
+  .header nav a {
+    font-size: 1em;
+  }
+
+  .header li + li {
+    margin-left: 10px;
+  }
+}
+
+/*SIDENAV*/
+
+.sidenav {
   grid-area: sidenav;
   background: #fafbfc;
   padding: 30px;
 }
 
-.sidenav li a{
+.sidenav li a {
   display: block;
   min-width: 60px;
   max-width: 100px;
   margin: 0 auto 30px auto;
-  background: #FFF;
+  background: white;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
   transition: 0.1s ease-out;
 }
 
-.sidenav li a:hover{
+.sidenav li a:hover {
   background: #b07dfb;
 }
 
-/* SIDENAV */
-
-/* CONTENT */
-
-.content{
-  grid-area: content;
+@keyframes seta {
+  from {
+    right: 30px;
+  }
+  to {
+    right: 20px;
+  }
 }
 
-/* CONTENT */
+@media (max-width: 760px) {
+  .sidenav {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    position: relative;
+  }
 
-/* ANUNCIOS */
-.anuncios{
-  grid-area: anuncios;
-  display: grid;
-  background: #fafbfc ;
-  align-content: start;
+  .sidenav::after {
+    content: '\2192';
+    position: absolute;
+    top: 5px;
+    right: 30px;
+    color: rgba(0, 0, 0, 0.3);
+    animation: seta 0.5s ease-in 0s infinite alternate;
+  }
+
+  .sidenav ul {
+    display: flex;
+  }
+
+  .sidenav ul li {
+    flex: 1 0 60px;
+  }
+
+  .sidenav {
+    padding: 0 30px;
+  }
+
+  .sidenav li a {
+    margin: 30px 30px 30px 0;
+  }
+}
+
+/*CONTENT*/
+
+.content {
+  grid-area: content;
+  max-width: 900px;
+  margin: 0 auto;
   padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
 
-/* ANUNCIOS */
-
-/* FOOTER */
-.footer{
-  grid-area: footer;
-  background: linear-gradient(135deg, #8844EE,#B07DFB);
+.col-wide {
+  grid-column: 1 / -1;
 }
 
-.footer p{
-  color: #FFF;
+.imagem-1 {
+  grid-row: span 2;
+  align-self: end;
+}
+
+.item-2 {
+  align-self: end;
+}
+
+@media (max-width: 600px) {
+  .content {
+    grid-template-columns: auto;
+  }
+}
+
+/*ESTILOS CONTENT*/
+
+p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  letter-spacing: -0.005em;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.informacoes p + p {
+  margin-top: 30px;
+}
+
+/*TITULO*/
+
+.titulo {
+  color: #b07dfb;
+}
+
+.titulo h1 {
+  font-size: 3.75em;
+  line-height: 1;
+  font-weight: 700;
+}
+
+.titulo span {
+  font-size: 0.875em;
+  font-style: italic;
+}
+
+/*CARACTERISTICAS*/
+
+.caracteristicas {
+  display: flex;
+  align-items: flex-start;
+}
+
+.caracteristicas > div {
+  width: 80px;
+  text-align: center;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  position: relative;
+}
+
+.caracteristicas > div:first-child {
+  margin-right: 30px;
+}
+
+.caracteristicas span {
+  display: block;
+  color: #b07dfb;
+}
+
+.numero {
+  font-size: 3em;
+  line-height: 1;
+  margin: 10px auto;
+}
+
+.rotulo {
+  background: white;
+  border-radius: 0 0 5px 5px;
+  padding: 5px 0;
+  position: relative;
+  top: 2px;
+}
+
+.destaque {
+  color: #b07dfb;
+  font-size: 0.875em;
+  max-width: 16em;
+}
+
+.citacao,
+.atributos {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  align-self: start;
+}
+
+.citacao p {
+  font-size: 1.5em;
+  font-style: italic;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  color: #ffff;
+}
+
+.atributos li {
+  color: #ffff;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.125em;
+  padding: 15px;
+}
+
+.atributos li + li {
+  border-top: 2px solid #b07dfb;
+}
+
+/*ANUNCIOS*/
+
+.anuncios {
+  grid-area: anuncios;
+  background: #fafbfc;
+  display: grid;
+  align-content: start;
+  padding: 30px;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px), 1fr);
+}
+
+/*FOOTER*/
+
+.footer {
+  grid-area: footer;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+
+.footer p {
+  color: white;
   text-align: center;
   padding: 30px;
 }
